@@ -1,3 +1,9 @@
+2003-10-07  Mark Page  <mpagenva@aol.com>
+
+	* nsd/adpeval.c (LogError): Limit the amount of script text added
+	into the errorInfo string, to keep from flowing adp script texts
+	of unlimited length into the server log.
+
 2003-10-01  Elizabeth Thomas <eathomas93@aol.com>
 
         * nsd/init.tcl: Fix to _ns_lzproc_load to handle subtle behavior with
